# MollieChallenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Tiltfile  challenge.ipynb  dev-requirements.txt  docker-compose.yml  pyproject.toml  report.xml  requirements-dev.txt  requirements-eda.txt  requirements.txt
.github/workflows/: merge_to_main.yaml  pytest_merge.yaml
EDA/: challenge.ipynb
charts/: Chart.yaml  values.yaml
charts/templates/: deployment.yaml
docs/: kind_tilt.md
docs/image/: kind_tilt.md
infra/: docker-compose.yml
infra/k8s/: kind-with-registry.sh  teardown-kind-with-registry.sh
src/artifacts/: model_0.2857142857142857.joblib
src/helpers/: mlflow.py  model.py
src/model/: test_train.py  train.py
src/server/: main.py  schemas.py  test_schema.py
src/train/helpers/: model.py
src/train/model/: train.py
tests/helpers/: test_model.py
tests/train/model/: test_train.py
