[project]
name = "molliechallenge"
version = "0.1.0"
description = ""
authors = [
  {name = "Gabriel Barbosa Soares", email = "gabrielclimb@gmail.com" },
  ]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
  "pandas==2.0.3",
  "jupyterlab==4.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# similar to black's
line-length = 90

[tool.ruff.pydocstyle]
convention = "google"
