[project]
name = "molliechallenge"
version = "0.1.0"
description = ""
authors = [
  {name = "Gabriel Barbosa Soares", email = "gabrielclimb@gmail.com" },
  ]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
  "pandas==2.0.3",
  "plotly==5.15.0",
  "scikit-learn==1.3.0",
  "scikit-lego==0.6.15",
  "joblib==1.3.2",
  "jupyterlab==4.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

serving=[
  "pydantic==2.1.1",
  "fastapi==0.101.0",
  "uvicorn==0.23.2"
]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# similar to black's
line-length = 90

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
