[project]
name = "molliechallenge"
version = "0.1.0"
description = ""
authors = [
  {name = "Gabriel Barbosa Soares", email = "gabrielclimb@gmail.com" },
  ]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
  "boto3==1.28.24",
  "fastapi==0.101.0",
  "mlflow==2.5.0",
  "pandas==2.0.3",
  "pydantic==2.1.1",
  "plotly==5.15.0",
  "seaborn==0.12.2",
  "scikit-learn==1.3.0",
  "joblib==1.3.2",
  "jupyterlab==4.0.4",
  "uvicorn==0.23.2",
  "yellowbrick==1.5"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# similar to black's
line-length = 90

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = "src"
